<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Timbrum</string>
    <string name="action_settings">Settings</string>
    <string name="pref_host">Host</string>
    <string name="pref_host_summary">Address of Zucchetti HR Portal\n(e.g. https://saas.hrzucchetti.it/hrpdefault/ )</string>
    <string name="pref_username">Username</string>
    <string name="pref_username_summary">Username used to login to HR Portal</string>
    <string name="pref_password">Password</string>
    <string name="pref_password_summary">Password used to login to HR Portal</string>
    <string name="pref_worktime">Time to work</string>
    <string name="pref_worktime_summary">Usual work hours and minutes</string>
    <string name="pref_lunchtime_start">Lunchtime Start</string>
    <string name="pref_lunchtime_start_summary">Time when you can go to lunch</string>
    <string name="pref_lunchtime_end">Lunchtime End</string>
    <string name="pref_lunchtime_end_summary">Time to get back to work</string>
    <string name="pref_lunchtime_min_duration">Lunchtime duration</string>
    <string name="pref_lunchtime_min_duration_summary">Minimum duration of the lunch</string>
    <string name="pref_pause_min_duration">Pause duration</string>
    <string name="pref_pause_min_duration_summary">Minimum duration for a pause</string>
    
    <string name="button_enter">Enter</string>
    <string name="button_exit">Exit</string>
    <string name="textview_todaysLog">Today\'s Log</string>
    <string name="refresh">Refresh</string>
    <string name="logging_in">Logging in...</string>
    <string name="loading_workspace">Loading workspace...</string>
    <string name="timbrum_in_progress">Timbrum in progress...</string>
    <string name="entry">Entry</string>
    <string name="exit">Exit</string>
    <string name="entered">Entered</string>
    <string name="exited">Exited</string>
    <string name="loading_logs">Loading logs...</string>
    <string name="login_error">"Login Error: "</string>
    <string name="error">"Error: "</string>
    <string name="loading">Loading</string>
    <string name="please_wait">Please wait...</string>
    <string name="worked">Worked</string>
    <string name="n_a">N/A</string>
    <string name="remaining">Remaining</string>
    <string name="exceeding">Exceeding</string>

    <string name="end_of_work_title">Work time is over</string>
    <string name="end_of_work_message">You can now sign-out</string>

    <string name="confirm_entry_title">Entry Confirmation</string>
    <string name="confirm_exit_title">Exit Confirmation</string>
    <string name="confirm_entry_message">Are you sure you want to sign-in?</string>
    <string name="confirm_exit_message">Are you sure you want to sign-out?</string>
    <string name="server_time">Server Time</string>
    <string name="exit_time">Exit Time</string>

    <string name="edit_settings_header">Edit Settings</string>
    <string name="edit_settings_summary">Change Host, Credentials and other settings</string>

    <string name="admobid">ca-app-pub-1177088523664187/5689192882</string>

    <string name="edit_developer_settings_header">Developer settings</string>
    <string name="pref_send_timbratura_id">Send Timbratura id</string>
    <string name="pref_variable_name_timbratura_id">Timbratura id variable name</string>

</resources>
