<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="it.buch85.timbrum.MainActivity"
    tools:ignore="MergeRootFrame" >

    <RelativeLayout
        android:id="@+id/summaryLayout"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="5dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/server_time"
            android:id="@+id/textView"
            android:layout_marginTop="20dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/n_a"
            android:id="@+id/textServerTime"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_below="@+id/textView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/textServerTime"
            android:layout_marginTop="20dp"
            android:gravity="top"
            android:text="@string/worked" />

        <TextView
            android:id="@+id/textWorked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/textView2"
            android:text="@string/n_a"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textRemainingLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/textWorked"
            android:layout_marginTop="20dp"
            android:gravity="top"
            android:text="@string/remaining" />

        <TextView
            android:id="@+id/textRemaining"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/textRemainingLabel"
            android:text="@string/n_a"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/listLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/summaryLayout"
        android:layout_above="@+id/seekBar1">

        <Button
            android:id="@+id/buttonRefresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/refresh"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/buttonRefresh"
            android:layout_alignBottom="@+id/buttonRefresh"
            android:layout_alignParentLeft="true"
            android:paddingBottom="2dip"
            android:paddingLeft="5dip"
            android:paddingTop="2dip"
            android:text="@string/textview_todaysLog"
            android:textAppearance="?android:attr/listSeparatorTextViewStyle"
            android:textSize="18sp" />

        <ListView
            android:id="@+id/listView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/buttonRefresh" >
        </ListView>
    </RelativeLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adMobadView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        app:adSize="BANNER"
        app:adUnitId="@string/admobid">
    </com.google.android.gms.ads.AdView>

    <it.buch85.timbrum.NoTapSeekBar
        android:id="@+id/seekBar1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/adMobadView"
        android:layout_marginBottom="50dp"
        android:layout_toLeftOf="@+id/textView3"
        android:layout_toRightOf="@+id/textView4"
        android:max="100"
        android:mirrorForRtl="false"
        android:progress="50"
        android:progressDrawable="@drawable/seekbar_progress" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/seekBar1"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/listLayout"
        android:layout_marginRight="10dp"
        android:gravity="center_vertical"
        android:text="@string/button_enter" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/seekBar1"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/seekBar1"
        android:layout_marginLeft="10dp"
        android:gravity="center_vertical"
        android:text="@string/button_exit" />

</RelativeLayout>